# backend/src/routes/schedule_route.ts
@@ -13,9 +13,6 @@ router.get('/schedule/:scheduleid', function(req, res){
 router.post('/create_schedule', function(req, res){
     schedule.createSchedule(req.body, res);
 });
-router.post('/update_schedule', function(req, res){
-    schedule.updateSchedule(req.body, res);
-});
 router.delete('/delete_schedule/:scheduleid', function(req, res){
     schedule.deleteSchedule(req.params.scheduleid, res);
 });
